--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         config {
-
+            keyAlias ''
+            keyPassword ''
+            storePassword ''
+            storeFile file('')
         }
     }
     compileSdkVersion 27
@@ -39,55 +42,49 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
-    repositories {
-        mavenCentral()
-        jcenter()
-        google()
-        maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com' }
-    }
-}
 
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-annotations:27.1.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
-    implementation 'io.pristine:libjingle:9694@aar'
-    implementation 'com.pubnub:pubnub-android:3.7.4'
-    implementation 'me.kevingleason:pnwebrtc:1.0.6@aar'
-    implementation 'com.brouding:android-simple-dialog:0.3.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.vanniktech:emoji-google:0.5.1'
-    implementation 'com.google.android.gms:play-services-vision:15.0.2'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
-    implementation 'com.google.firebase:firebase-core:16.0.0'
-    implementation 'com.google.firebase:firebase-firestore:17.0.1'
-    implementation 'com.github.AlbertGrobas:MovingImageView:7d262def65'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
-    implementation 'com.rilixtech:materialfancybuttons:1.8.7'
-    implementation 'com.flipboard:bottomsheet-core:1.5.3'
-    implementation 'com.flipboard:bottomsheet-commons:1.5.3'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.github.florent37:shapeofview:1.0.7'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'com.myhexaville:smart-image-picker:1.0.4'
-    implementation 'com.github.ozodrukh:CircularReveal:1.1.0'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    dependencies {
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        implementation 'android.arch.persistence.room:runtime:1.1.1'
+        annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+        implementation "android.arch.lifecycle:extensions:1.1.1"
+        annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+        implementation 'com.android.support:appcompat-v7:27.1.1'
+        implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+        implementation 'com.android.support:design:27.1.1'
+        implementation 'com.android.support:support-annotations:27.1.1'
+        implementation 'com.google.firebase:firebase-auth:16.0.1'
+        implementation 'com.google.firebase:firebase-messaging:17.0.0'
+        implementation 'io.pristine:libjingle:9694@aar'
+        implementation 'com.pubnub:pubnub-android:3.7.4'
+        implementation 'me.kevingleason:pnwebrtc:1.0.6@aar'
+        implementation 'com.brouding:android-simple-dialog:0.3.1'
+        implementation 'com.android.support:recyclerview-v7:27.1.1'
+        implementation 'com.android.support:support-vector-drawable:27.1.1'
+        implementation 'com.vanniktech:emoji-google:0.5.1'
+        implementation 'com.google.android.gms:play-services-vision:15.0.2'
+        implementation 'com.android.support:multidex:1.0.3'
+        implementation 'com.google.firebase:firebase-storage:16.0.1'
+        implementation 'com.google.firebase:firebase-core:16.0.0'
+        implementation 'com.google.firebase:firebase-firestore:17.0.1'
+        implementation 'com.github.AlbertGrobas:MovingImageView:7d262def65'
+        implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+        implementation 'com.rilixtech:materialfancybuttons:1.8.7'
+        implementation 'com.flipboard:bottomsheet-core:1.5.3'
+        implementation 'com.flipboard:bottomsheet-commons:1.5.3'
+        implementation 'de.hdodenhof:circleimageview:2.2.0'
+        implementation 'com.github.florent37:shapeofview:1.0.7'
+        implementation 'com.github.bumptech.glide:glide:4.7.1'
+        implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+        implementation 'com.myhexaville:smart-image-picker:1.0.4'
+        implementation 'com.github.ozodrukh:CircularReveal:1.1.0'
+        implementation 'com.android.support:cardview-v7:27.1.1'
+        implementation 'com.android.support:support-v4:27.1.1'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'com.android.support.test:runner:1.0.2'
+        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    }
+    apply plugin: 'com.google.gms.google-services'
 }
-apply plugin: 'com.google.gms.google-services'
